# Orca

./: .gitconfig  .gitignore  .gitmessage  CLAUDE.md  README.md  SETUP.md  bootstrap_project.md  check_dependencies.md  create_new_project.md  impl_agent_definitions.md  impl_agent_prompts.md  impl_architecture.md  impl_discovery.md  impl_plan.md  impl_requirements.md  impl_review.md  impl_tasks.md  initialize_current_project.md  new_project_workflow.md  pyproject.toml  start.md  startup_check.md  workflow_review.md
.archive/: README.md
.claude/: settings.local.json
.claude/commands/: orca-add-feature.md  orca-deps.md  orca-execute.md  orca-github.md  orca-new.md  orca-preview.md  orca-start.md  orca-startup.md  orca-validate.md  orca-workflow.md
.githooks/: README.md  commit-msg  post-checkout  post-merge  pre-commit  pre-push  prepare-commit-msg
.github/: QUICK_REFERENCE.md  WORKFLOW.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: archon-integration.yml
.orca/executions/exec-state-track-20251002/: execution_summary.md
.serena/: project.yml
.serena/memories/: code_structure.md  eloqua_api_integration_notes.md  eloqua_mcp_project_overview.md  orca_add_feature_improvement.md  project_overview.md  style_conventions.md  suggested_commands.md  task_completion_guidelines.md
.windsurf/: QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  config.json  launch.json  rules.md  settings.json  tasks.json
docs/: agent_definitions.md  agent_prompts.md  architecture.md  dev_execution_agent_definitions.md  dev_execution_agent_prompts.md  dev_execution_architecture.md  dev_execution_discovery.md  dev_execution_plan.md  dev_execution_requirements.md  dev_execution_research.md  dev_execution_review.md  dev_execution_tasks.md  discovery.md  execution_system_guide.md  plan.md  process_improvement_features.md  process_improvement_plan.md  requirements.md  research.md  task_review.md  tasks.md
docs/examples/: ORCA_EXECUTE_DEMONSTRATION.md
examples/: advanced_configuration_examples.md  sample_execution_workflow.md
scripts/: archive-workflow.sh
scripts/git-helpers/: README.md  create-feature-branch.sh  finish-feature.sh  sync-task-status.sh
src/: __init__.py
src/analysis/: __init__.py  dependency_analyzer.py  execution_planner.py  parallel_optimizer.py
src/configuration/: __init__.py  execution_config.py
src/context/: __init__.py  context_enrichment_engine.py  implementation_plan_parser.py  task_context_generator.py
src/execution/: __init__.py  agent_coordinator.py  execution_monitor.py  parallel_orchestrator.py  quality_gate_engine.py
src/integration/: __init__.py  workflow_integrator.py
src/mcp/: __init__.py  archon_client.py  base_client.py  connection_manager.py  serena_client.py
src/models/: __init__.py  complete_task.py  execution_graph.py  quality_models.py  result_models.py
src/orca_development_execution.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/: .claude.json  .mcp.json  CLAUDE_template.md  PROJECT_BRIEF_template.md  README_template.md  agent_definitions.md  agent_prompts.md  github_workflow_ci_template.yml  gitignore_template  serena_memory_code_structure_template.md  serena_memory_project_overview_template.md  serena_memory_style_conventions_template.md  serena_memory_suggested_commands_template.md  serena_memory_task_completion_guidelines_template.md  settings.local.json
tests/: __init__.py  conftest.py  test_models.py
tests/integration/: test_end_to_end_execution.py  test_workflow_integration.py
